--- a/main.css
+++ b/main.css
@@ -1,20 +1,21 @@
 body {
-    font-family: Roboto, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
 }
 
 .navbar {
-    background-color: #e15f41;
+    background-color: #3f972b;
 }
 
 #cabecalho .nav .nav-link.active {
     background-color: #fff;
-    color: #e15f41;
+    color:  #3f972b;
 }
 
 #cabecalho .nav .nav-link,
 .navbar-brand,
 .navbar-brand:hover,
-.nav-cardapio .nav-link.active:hover {
+.nav-produto.nav-link.active:hover {
     color: #fff;
 }
 
@@ -22,35 +23,45 @@ body {
    font-size: 18px;
 }
 
+.container .logo {
+    width: 100px;
+}
+
 .navbar-toggler {
     background-color:#fffefe
 }
 
 .section-title {
-    font-family: Pacifico, cursive;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
 }
 
-#sobre-o-restaurante {
+#sobre-nos {
     background-color: #fffefe;
 }
 
-.text-colored {
-    color:#e15f41;
+.row .sobre-nos {
+    height: 350px;
+    width: 300px;
 }
 
-.nav-cardapio .nav-link.active,
+.text-colored {
+    color: #3f972b;
+}
+
+.nav-produto .nav-link.active,
 .fale-conosco button {
-    background-color: #e15f41;
+    background-color: #9bb993;
     color: #fff;
 }
 
-.nav-cardapio .nav-link:hover {
-   color: #e15f41; 
+.nav-produto .nav-link:hover {
+   color: #3f972b;
 }
 
-.eventos,
+.controles,
 #fale-conosco {
-    background-color: #e2d6d3;
+    background-color: #d5f9d497;
 }
 
 .social-links li {
@@ -60,6 +71,7 @@ body {
 
 .social-links a {
     text-decoration: none;
+    
 }
 
 .error {
@@ -68,8 +80,44 @@ body {
     color: rgb(87, 85, 85);
 }
 
+.container .controles-personalizados {
+    max-width: 70%;
+
+}
+
+.material-symbols-outlined {
+    cursor: pointer;
+}
+
+.material-symbols-outlined:hover{
+    color: rgb(14, 233, 39);
+    font-size: 30px;
+}
+
+.card .card-body .card-text {
+    font-size: 15px;
+}
+
+
 @media (max-width: 767px) {
     .carousel-item img {
         height: 280px;
+    }
+}
+
+@media (max-width: 540px) {
+    .carousel-item img {
+        width: 380px;
+        height: 200px;
+    }
+
+    .sobre-nos {
+        margin-left: 8%;
+    }
+}
+
+@media screen and (max-width: 1570px) {
+    .carousel-item img {
+
     }
 }
